--- a/BackPortal/Views/Base.lproj/Patients.storyboard
+++ b/BackPortal/Views/Base.lproj/Patients.storyboard
@@ -29,7 +29,7 @@
         <!--Patient Name-->
         <scene sceneID="Hd8-4K-eui">
             <objects>
-                <viewController id="ERB-Ib-2Rx" customClass="PatientDetailViewController" customModule="BackPortal" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="ERB-Ib-2Rx" customClass="PatientDetailViewController" customModule="BackPortal" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="gsd-S5-LLr"/>
                         <viewControllerLayoutGuide type="bottom" id="dAv-Wy-m4a"/>
@@ -196,20 +196,20 @@
         <!--Activies View Controller-->
         <scene sceneID="UPg-2c-7Uc">
             <objects>
-                <collectionViewController id="0eu-cO-tCq" customClass="ActiviesViewController" customModule="BackPortal" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController automaticallyAdjustsScrollViewInsets="NO" id="0eu-cO-tCq" customClass="ActiviesViewController" customModule="BackPortal" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="4XY-SU-o9U">
                         <rect key="frame" x="0.0" y="0.0" width="702.5" height="704"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="qhC-4l-en9">
                             <size key="itemSize" width="200" height="100"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="headerReferenceSize" width="0.0" height="75"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="InterventionCell" id="vGn-ne-mFl" customClass="InterventionCell" customModule="BackPortal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
+                                <rect key="frame" x="0.0" y="75" width="200" height="100"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
@@ -264,7 +264,7 @@
                                 </connections>
                             </collectionViewCell>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AssessmentCell" id="PMu-li-Vx0" customClass="AssessmentCell" customModule="BackPortal" customModuleProvider="target">
-                                <rect key="frame" x="251.5" y="0.0" width="200" height="100"/>
+                                <rect key="frame" x="251.5" y="75" width="200" height="100"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
@@ -337,6 +337,34 @@
                                 </connections>
                             </collectionViewCell>
                         </cells>
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ActivitiesSectionHeader" id="rt5-Md-LSf">
+                            <rect key="frame" x="0.0" y="0.0" width="702.5" height="75"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MYM-kB-3kh" userLabel="Content View">
+                                    <rect key="frame" x="0.0" y="0.0" width="703" height="75"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Section Header" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0s6-wO-g9O">
+                                            <rect key="frame" x="20" y="27" width="119" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="0s6-wO-g9O" firstAttribute="leading" secondItem="MYM-kB-3kh" secondAttribute="leading" constant="20" symbolic="YES" id="13E-eD-FZL"/>
+                                        <constraint firstItem="0s6-wO-g9O" firstAttribute="centerY" secondItem="MYM-kB-3kh" secondAttribute="centerY" id="hnd-0p-kHP"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="MYM-kB-3kh" secondAttribute="trailing" id="4ba-u5-BjO"/>
+                                <constraint firstAttribute="bottom" secondItem="MYM-kB-3kh" secondAttribute="bottom" id="A5i-nF-QUq"/>
+                                <constraint firstItem="MYM-kB-3kh" firstAttribute="top" secondItem="rt5-Md-LSf" secondAttribute="top" id="Px7-WX-GbQ"/>
+                                <constraint firstItem="MYM-kB-3kh" firstAttribute="leading" secondItem="rt5-Md-LSf" secondAttribute="leading" id="myM-Mi-awx"/>
+                            </constraints>
+                        </collectionReusableView>
                         <connections>
                             <outlet property="dataSource" destination="0eu-cO-tCq" id="Z4k-zh-Wjj"/>
                             <outlet property="delegate" destination="0eu-cO-tCq" id="Fqc-Yz-mYn"/>
